--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -3,6 +3,7 @@
 .header-banner {
     font-family: 'Bebas Neue', cursive;
     font-size: 70px;
+    background: linear-gradient(rgba(0,0,150,0.5),rgba(0,0,50,0.5))
 }
 
 .right-side {
@@ -20,6 +21,28 @@
     background-color: rgb(17, 0, 34);
     padding-top: 20px;
 }
+
+nav li {
+    list-style-type: none;
+    margin: 30px 0;
+}
+
+.nav-buttons {
+    text-decoration: none;
+    font-size: 25px;
+    font-weight: 300;
+    font-family: 'Bebas Neue', cursive;
+    cursor: pointer;
+}
+
+
+.socials-container li{
+    display: inline-block;
+    margin-top: 250px;
+    position: relative;
+    margin-left: 20px;
+}
+
 
 .section-heading {
     font-family: 'Bebas Neue', cursive;
