--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -1,9 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+body {
+    background-color: #485063;
+}
+
 .header-banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -5rem;
     font-family: 'Bebas Neue', cursive;
     font-size: 70px;
-    background: linear-gradient(rgba(0,0,150,0.5),rgba(0,0,50,0.5))
+    background: linear-gradient(rgba(0,0,150,0.5),rgba(0,0,50,0.5)),url(https://images.pexels.com/photos/1955134/pexels-photo-1955134.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    background-size: cover;
+    background-position: center;
+    color: #bcafd5;
 }
 
 .right-side {
@@ -18,8 +29,9 @@
     top: 0px;
     bottom: 0px;
     left: 0px;
-    background-color: rgb(17, 0, 34);
+    background-color: #222326;
     padding-top: 20px;
+    color: #bcafd5;
 }
 
 nav li {
@@ -33,6 +45,7 @@ nav li {
     font-weight: 300;
     font-family: 'Bebas Neue', cursive;
     cursor: pointer;
+    color: #c0c4cf;
 }
 
 
@@ -41,15 +54,24 @@ nav li {
     margin-top: 250px;
     position: relative;
     margin-left: 20px;
+    color: #bcafd5;
 }
 
+.socials-container i {
+    color: #c0c4cf;
+}
 
 .section-heading {
     font-family: 'Bebas Neue', cursive;
 }
 
+.about-section {
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(108,9,121,0.94) 45%, rgba(100,107,196,0.9755252442773985) 100%);
+}
 .about-content {
     font-family: 'Bebas Neue', cursive;
+    color: #c0c4cf;
 }
 
 .experience-content {
