--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -52,9 +52,9 @@ nav li {
 
 .socials-container li{
     display: inline-block;
-    margin-top: 250px;
+    margin-top: 260px ;
     position: relative;
-    margin-left: 20px;
+    margin-left: 10px;
     color: #bcafd5;
 }
 
@@ -85,6 +85,9 @@ nav li {
     font-family: 'Bebas Neue', cursive;
     font-size: 55px;
     color:#ac06fa;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .about-section {
