--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -97,14 +97,46 @@ nav li {
     font-family: 'Bebas Neue', cursive;
 }
 
-.experience-content {
+.project-container {
+    color: #c0c4cf;
     font-family: 'Bebas Neue', cursive;
 }
 
+.project-title {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 55px;
+    color: #c0c4cf;
+    margin-left: 40px;
+}
+
+
+
 .skills-list {
     font-family: 'Bebas Neue', cursive;
-    margin-left: 400px;
+    margin: 0px 20px 0px 400px;
     color: #c0c4cf;
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    flex-wrap: wrap;
+}
+
+
+.spaced-icon {
+    margin-right: 55px;
+    margin-bottom: 30px;
+}
+
+.mongo-pic {
+    height: auto;
+    width: 100px;
+    margin-right: 60px;
+}
+
+.mysql-pic {
+    height: 100px;
+    width: 100px;
+    margin-right: 60px;
 }
 
 .contact-form {
