--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -6,16 +6,39 @@ body {
 
 .header-banner {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
     margin-top: -5rem;
     font-family: 'Bebas Neue', cursive;
-    font-size: 65px;
+    font-size: 55px;
     background: linear-gradient(rgba(0,0,150,0.5),rgba(0,0,50,0.5)),url(https://images.pexels.com/photos/1955134/pexels-photo-1955134.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
     background-size: cover;
     background-position: center;
     color: #bcafd5;
     border:2px solid #ac06fa ;
+}
+
+.developer {
+    margin-left: -95px;
+}
+
+.emoji {
+    animation-name: emoji-animation; 
+    animation-duration: 2.5s;
+    animation-iteration-count: infinite; 
+    transform-origin: 70% 70%;
+    display: inline-block;
+}
+
+@keyframes emoji-animation {
+    0% { transform: rotate( 0.0deg) }
+    10% { transform: rotate(14.0deg) }
+    20% { transform: rotate(-8.0deg) }
+    30% { transform: rotate(14.0deg) }
+    40% { transform: rotate(-4.0deg) }
+    50% { transform: rotate(10.0deg) }
+    60% { transform: rotate( 0.0deg) }
+    100% { transform: rotate( 0.0deg) }
 }
 
 .right-side {
@@ -88,6 +111,11 @@ nav li {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 40px;
+}
+
+.section-space{
+    margin-bottom: 300px;
 }
 
 .about-section {
@@ -95,7 +123,11 @@ nav li {
 }
 .about-content {
     font-family: 'Bebas Neue', cursive;
+    padding-left: 90px;
+    padding-right: 90px;
 }
+
+
 
 .project-container {
     color: #c0c4cf;
@@ -125,7 +157,7 @@ nav li {
 }
 
 .project-button:hover {
-    background-color: #6a099765 ;
+    background-color: #b954e7be ;
     transition: background-color 1s ease;
 }
 
@@ -163,12 +195,43 @@ nav li {
     flex-direction: column;
 }
 
+label {
+    font-family: 'Bebas Neue', cursive;
+    color:#c0c4cf;
+}
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 20px; 
+    border: 2px solid #ac06fa;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px; 
+    resize: vertical 
+}
+
+
+input[type=submit] {
+    background-color: #ac06fa;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #6a0997;
+}
+
 footer {
     display: flex;
     align-items: center;
+    justify-content: center;
+    flex-direction: column;
     color: #c0c4cf ;
-    min-height: 17.1rem;
-    background: #222326;
+    margin-top: 50px;
+    margin-bottom: 7px;
     font-family: 'Bebas Neue', cursive;
-    margin-left: -3rem;
 }
