--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -123,11 +123,9 @@ nav li {
 }
 .about-content {
     font-family: 'Bebas Neue', cursive;
-    padding-left: 90px;
+    padding-left: 40px;
     padding-right: 90px;
 }
-
-
 
 .project-container {
     color: #c0c4cf;
@@ -234,4 +232,73 @@ footer {
     margin-top: 50px;
     margin-bottom: 7px;
     font-family: 'Bebas Neue', cursive;
+}
+
+@media screen and (max-width: 768px) {
+    .side-nav {
+        display: flex;
+        flex-direction: row;
+        background-color: #092c96;
+        color: #bcafd5;
+    }
+    
+    nav li {
+        list-style-type: none;
+        margin: 30px 0;
+    }
+    
+    .nav-buttons {
+        text-decoration: none;
+        font-size: 25px;
+        font-weight: 300;
+        font-family: 'Bebas Neue', cursive;
+        cursor: pointer;
+        color: #c0c4cf;
+    }
+    
+    
+    .socials-container li{
+        flex-direction: row;
+        margin-top: 260px ;
+        position: relative;
+        margin-left: 10px;
+        color: #bcafd5;
+    }
+
+    .header-banner {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin-top: -1rem;
+        font-family: 'Bebas Neue', cursive;
+        font-size: 25px;
+        background: linear-gradient(rgba(0,0,150,0.5),rgba(0,0,50,0.5)),url(https://images.pexels.com/photos/1955134/pexels-photo-1955134.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+        background-size: cover;
+        background-position: center;
+        color: #bcafd5;
+        border:2px solid #ac06fa ;
+    }
+    
+    .developer {
+        margin-left: -35px;
+    }
+
+    .project-container {
+        color: #c0c4cf;
+        font-family: 'Bebas Neue', cursive;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .contact-form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin-left: 200px;
+        padding: 0px 10px;
+    }
+
 }
