--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -255,10 +255,8 @@ footer {
 
 @media screen and (max-width: 768px) {
     .side-nav {
-        display: flex;
-        flex-direction: row;
-        background-color: #092c96;
-        color: #bcafd5;
+        background-color: #333;
+        overflow: hidden;
     }
     
     nav li {
@@ -274,10 +272,9 @@ footer {
         cursor: pointer;
         color: #c0c4cf;
     }
-    
-    
+
+
     .socials-container li{
-        flex-direction: row;
         margin-top: 260px ;
         position: relative;
         margin-left: 10px;
@@ -320,4 +317,112 @@ footer {
         padding: 0px 10px;
     }
 
+}
+@media screen and (min-width: 375px) {
+    .side-nav {
+        color: #d8d8d8;
+        text-align: center;
+        text-decoration: none;
+        font-size: 17px;
+        position: relative;
+        width: 100%;
+    }
+    .right-side {
+        width: 75%;
+        padding: 100px;
+        margin-left: -1.5rem;
+    }
+    
+    
+    nav li {
+        list-style-type: none;
+        margin: 30px 0;
+    }
+    
+    .nav-buttons {
+        text-decoration: none;
+        font-size: 25px;
+        font-weight: 300;
+        font-family: 'Bebas Neue', cursive;
+        cursor: pointer;
+        color: #c0c4cf;
+    }
+
+
+    .socials-container li{
+        margin-top: 40px ;
+        position: relative;
+        margin-left: 10px;
+        color: #bcafd5;
+    }
+
+    .header-banner {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 5rem;
+        font-family: 'Bebas Neue', cursive;
+        font-size: 20px;
+        background: linear-gradient(rgba(0,0,150,0.5),rgba(0,0,50,0.5)),url(https://images.pexels.com/photos/1955134/pexels-photo-1955134.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+        background-size: cover;
+        background-position: center;
+        color: #bcafd5;
+        border:2px solid #ac06fa ;
+    }
+    
+    .developer {
+        margin-left: -35px;
+    }
+
+    .project-title{
+        margin-left: 150px;
+    }
+
+    .project-container {
+        color: #c0c4cf;
+        font-family: 'Bebas Neue', cursive;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .prj {
+        margin-left: 70px;
+    }
+
+    .skills-list {
+        font-family: 'Bebas Neue', cursive;
+        /* margin: 0px -400px 0px 230px; */
+        color: #c0c4cf;
+        display: flex;
+        flex-direction: column;
+        list-style-type: none;
+        flex-wrap: wrap;
+    }
+    
+    .spaced-icon {
+        margin-right: 55px;
+        margin-bottom: 30px;
+    }
+    
+    .mongo-pic {
+        height: auto;
+        width: 100px;
+        margin-right: 60px;
+    }
+    
+    .mysql-pic {
+        height: 100px;
+        width: 100px;
+        margin-right: 60px;
+    }
+
+    .contact-form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        margin-left: 200px;
+        padding: 0px 10px;
+    }
 }
