--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -253,74 +253,12 @@ footer {
     font-family: 'Bebas Neue', cursive;
 }
 
-@media screen and (max-width: 768px) {
+@media only screen 
+    and (min-width : 375px) 
+    and (max-height : 812px)
+    and (orientation : portrait)  
+    and (-webkit-device-pixel-ratio : 3) {
     .side-nav {
-        background-color: #333;
-        overflow: hidden;
-    }
-    
-    nav li {
-        list-style-type: none;
-        margin: 30px 0;
-    }
-    
-    .nav-buttons {
-        text-decoration: none;
-        font-size: 25px;
-        font-weight: 300;
-        font-family: 'Bebas Neue', cursive;
-        cursor: pointer;
-        color: #c0c4cf;
-    }
-
-
-    .socials-container li{
-        margin-top: 260px ;
-        position: relative;
-        margin-left: 10px;
-        color: #bcafd5;
-    }
-
-    .header-banner {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        margin-top: -1rem;
-        font-family: 'Bebas Neue', cursive;
-        font-size: 25px;
-        background: linear-gradient(rgba(0,0,150,0.5),rgba(0,0,50,0.5)),url(https://images.pexels.com/photos/1955134/pexels-photo-1955134.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-        background-size: cover;
-        background-position: center;
-        color: #bcafd5;
-        border:2px solid #ac06fa ;
-    }
-    
-    .developer {
-        margin-left: -35px;
-    }
-
-    .project-container {
-        color: #c0c4cf;
-        font-family: 'Bebas Neue', cursive;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-
-    .contact-form {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        margin-left: 200px;
-        padding: 0px 10px;
-    }
-
-}
-@media screen and (min-width: 375px) {
-    .side-nav {
-        color: #d8d8d8;
         text-align: center;
         text-decoration: none;
         font-size: 17px;
@@ -422,7 +360,10 @@ footer {
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        margin-left: 200px;
+        margin-left: 15px;
         padding: 0px 10px;
     }
 }
+
+
+
