--- a/Assets/css/stylesheet.css
+++ b/Assets/css/stylesheet.css
@@ -128,6 +128,10 @@ nav li {
     font-size: 25px;
 }
 
+.prj-img {
+    object-fit: contain;
+}
+
 .project-container {
     color: #c0c4cf;
     font-family: 'Bebas Neue', cursive;
